--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "author": "AC",
   "license": "MIT",
   "dependencies": {
+    "axios": "^0.19.0",
     "concurrently": "^4.1.1",
+    "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "mysql": "^2.17.1",
     "mysql2": "^1.6.5",
